# motoheadset

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  partitions.csv  sdkconfig  workspace.code-workspace
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  I2SOutput.cpp  I2SOutput.h  Microphone.cpp  Microphone.h  SampleSource.h  WAVFileReader.cpp  WAVFileReader.h  files.cpp  files.h  i2s_driver.cpp  i2s_driver.h  i2s_microphone.cpp  i2s_microphone.h
src/cli/: CMakeLists.txt  cmd_system.cpp  console.cpp  console.h
